[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = "Python Playground"
authors = ["Alex M <alex@mosstech.io>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
