[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = "Python Playground"
authors = ["Alex M <alex@mosstech.io>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.9"
python-decouple = "^3.6"
pytest = "^7.1.2"
requests = "^2.27.1"
selenium = "^4.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
